--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<meta property="og:image" content="http://www.white-mamadou.ml/assets/img/avatar.jpg"/>
 		
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" media="screen"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/nanogallery.min.css" media="screen"/>
 		<link rel="stylesheet" type="text/css" href="assets/css/index.css" media="screen"/>
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 	</head>
@@ -44,14 +45,21 @@
 				</ul>
 			</div>
 			<hr>
+			<div id="memes">
+				<h4>Memes</h4>
+				<div id="gallery">
+				</div>
+			</div>
+			<hr>
 			<div id="twitter">
 				<h4>Dernié twitte :</h4>
-				<span id="last-tweet">
-				</span>
+				<div id="last-tweet" class="well">
+				</div>
 			</div>
 		</div>
 		<script type="text/javascript" src="assets/js/twitter-fetcher.min.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.min.js"></script>
+		<script type="text/javascript" src="assets/js/jquery.nanogallery.min.js"></script>
 		<script type="text/javascript" src="assets/js/index.js"></script>
 	</body>
 </html>
