--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<meta property="og:description" content="Sitte officielle de Mamadou Blanc."/>
 		<meta property="og:image" content="http://www.white-mamadou.ml/assets/img/avatar.jpg"/>
 		
-		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" media="screen"/>
-		<link rel="stylesheet" type="text/css" href="assets/css/nanogallery.min.css" media="screen"/>
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" media="screen"/>
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery/5.7.0/css/nanogallery.min.css" media="screen"/>
 		<link rel="stylesheet" type="text/css" href="assets/css/index.css" media="screen"/>
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 	</head>
@@ -57,9 +57,9 @@
 				</div>
 			</div>
 		</div>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery/5.7.0/jquery.nanogallery.min.js"></script>
 		<script type="text/javascript" src="assets/js/twitter-fetcher.min.js"></script>
-		<script type="text/javascript" src="assets/js/jquery.min.js"></script>
-		<script type="text/javascript" src="assets/js/jquery.nanogallery.min.js"></script>
 		<script type="text/javascript" src="assets/js/index.js"></script>
 	</body>
 </html>
