--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<meta property="og:image" content="http://www.white-mamadou.ml/assets/img/avatar.jpg"/>
 		
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" media="screen"/>
-		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery/5.7.0/css/nanogallery.min.css" media="screen"/>
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery/5.7.0/css/themes/light/nanogallery_light.min.css" media="screen"/>
 		<link rel="stylesheet" type="text/css" href="assets/css/index.css" media="screen"/>
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 	</head>
