--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<body>
 		<div id="vcard" class="center-block">
 			<div id="title">
-				<img class="thumbnail" src="assets/img/avatar.jpg"/>
+				<img class="thumbnail" src="assets/img/avatar.jpg" title="PRÉ A DANCÉ ??" style="display: inline;"/>
 				<h1>Mamadou Blanc</h1>
 				<p id="catchphrase"></p>
 			</div>
@@ -58,8 +58,13 @@
 				</div>
 			</div>
 		</div>
+		<div id="segpa-song" class="hidden">
+			<img class="thumbnail center-block" src="assets/img/avatar.jpg" title="OREVOIRE"/>
+		</div>
+		<div id="player"></div>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery/5.7.0/jquery.nanogallery.min.js"></script>
+		<script type="text/javascript" src="http://www.youtube.com/player_api"></script>
 		<script type="text/javascript" src="assets/js/twitter-fetcher.min.js"></script>
 		<script type="text/javascript" src="assets/js/index.js"></script>
 	</body>
