Video loop and about.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 		</div>
 		<div id="segpa-song" class="hidden">
 			<img class="thumbnail center-block" src="assets/img/avatar.jpg" title="OREVOIRE"/>
+			<div id="about">
+				Made with <span style="color: #c0392b;">♥</span>
+			</div>
 		</div>
 		<div id="player"></div>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
