Edited about section.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 		</div>
 		<div id="segpa-song" class="hidden">
 			<img class="thumbnail center-block" src="assets/img/avatar.jpg" title="OREVOIRE"/>
-			<div id="about">
-				Made with <span style="color: #c0392b;">♥</span>
-			</div>
+			<a id="about" href="https://github.com/Skyost/WhiteMamadou" target="_blank">Hosted with <span style="color: #c0392b;">♥</span> by Github Pages</a>
 		</div>
 		<div id="player"></div>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
