Click on the left button = copy.

--- a/voice/index.html
+++ b/voice/index.html
@@ -86,7 +86,9 @@
 				<div class="col-md-4">
 					<button id="getlink" class="btn btn-default"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Obtenir le lien</button>
 					<div class="input-group hidden">
-						<div class="input-group-addon"><span class="glyphicon glyphicon-copy" aria-hidden="true" title="Copier le lien"></span></div>
+						<div class="input-group-addon" title="Copier le lien">
+							<span class="glyphicon glyphicon-copy" aria-hidden="true"></span>
+						</div>
 						<input type="text" class="form-control"/>
 					</div>
 				</div>
