Mise à jour de certains textes.

--- a/voice/index.html
+++ b/voice/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<meta charset='utf-8'/>
-	<title>Liseur de voix Voxygen</title>
-	<meta name="description" content="Liseur de voix Voxygen."/>
-	<meta name="keywords" content="liseur, voix, voxygen, white, mamadou, famous"/>
+	<title>Lecteur Voxygen</title>
+	<meta name="description" content="Lecteur Voxygen."/>
+	<meta name="keywords" content="lecteur, voix, voxygen, white, mamadou, famous"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	
 	<!-- Twitter Cards -->
 	<meta name="twitter:card" content="summary"/>
-	<meta name="twitter:title" content="Liseur de voix Voxygen"/>
+	<meta name="twitter:title" content="Lecteur Voxygen"/>
 	<meta name="twitter:site" content="@white_mamadou"/>
 	<meta name="twitter:creator" content="@white_mamadou"/>
 	<meta name="twitter:url" content="http://www.white-mamadou.ml/voice/"/>
@@ -18,7 +18,7 @@
 	
 	<!-- Open Graph -->
 	<meta property="og:type" content="website"/>
-	<meta property="og:title" content="Liseur de voix Voxygen"/>
+	<meta property="og:title" content="Lecteur Voxygen"/>
 	<meta property="og:site_name" content="Liseur de voix Voxygen"/>
 	<meta property="og:url" content="http://www.white-mamadou.ml/voice/"/>
 	<meta property="og:description" content="Liseur de voix Voxygen."/>
@@ -31,7 +31,7 @@
 </head>
 	<body>
 		<div class="container">
-			<h1><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> Liseur Voxygen</h1>
+			<h1><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> Lecteur Voxygen</h1>
 			<hr>
 			<div>
 				<select id="voices" class="form-control">
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 		<footer>
-			<p class="text-muted">Wesh les fils de vos mère, ce liseur existe grâce à <a href="http://voxygen.fr/fr">Voxygen</a>.
+			<p class="text-muted">Wesh les fils de vos mère, ce lecteur existe grâce à <a href="http://voxygen.fr/fr">Voxygen</a>. Et aussi un peu grâce à Hugo.
 			<br>PS : JE SUIS FAMOUS.</p>
 		</footer>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
