Ma voix a été mise à jour.

--- a/voice/index.html
+++ b/voice/index.html
@@ -60,14 +60,14 @@
 						<option value="15">John</option>
 						<option value="16">Loic</option>
 						<option value="17">Melodine</option>
-						<option value="18">Papi</option>
-						<option value="19">Philippe</option>
-						<option value="20">Ramboo</option>
-						<option value="21">Robot</option>
-						<option value="22">Sidoo</option>
-						<option value="23">Sorciere</option>
-						<option value="24">Yeti</option>
-						<option value="25" selected="selected">Zozo</option>
+						<option value="18" selected="selected">Moussa</option>
+						<option value="19">Papi</option>
+						<option value="20">Philippe</option>
+						<option value="21">Ramboo</option>
+						<option value="22">Robot</option>
+						<option value="23">Sidoo</option>
+						<option value="24">Sorciere</option>
+						<option value="25">Yeti</option>
 					</optgroup>
 					<optgroup label="Italiano">
 						<option value="26">Sonia</option>
